# ZephyrAI

./: .gitignore  CMakeLists.txt  Kconfig  README.md  Zephyr.cbuild-pack.yml  Zephyr.cproject.yml  Zephyr.csolution.yml  aidemo.py  build.bat  cdefault.yml  flash.cbuild-run.yml  load_config.yml  network.cbuild-run.yml  prj.conf  vcpkg-configuration.json
.github/workflows/: build_docker.yml  build_executorch.yml
boards/: alif_e7_dk_rtss_he.conf  alif_e7_dk_rtss_he.overlay  alif_e8_dk_rtss_he.conf  alif_e8_dk_rtss_he.overlay  camera.overlay  pinmux.overlay
cmsisstream/: CMakeLists.txt  Kconfig  StreamNode.hpp
cmsisstream/zephyr/: module.yml
cmsisstream/zephyr_runtime/: cmsisstream_zephyr_config.hpp  event_queue.cpp  event_queue.hpp  runtime_init.cpp  runtime_init.h  runtime_init.hpp  stream_event_queue.hpp  stream_runtime_init.cpp  stream_runtime_init.hpp  zephyr_allocator.hpp
doc/: demos.md  switch.md  tech_details.md
executorch/: CMakeLists.txt  REPORT.md  et.cpp  et.hpp
executorch/executorch/: REPORT.md
executorch/executorch/engine/: stage1_source.clayer.yml  stage2_source.clayer.yml
executorch/executorch/engine/backends/cortex_m/ops/: op_quantized_add.cpp
executorch/executorch/engine/executorch_selected_kernels/: Functions.h  NativeFunctions.h  RegisterCodegenUnboxedKernelsEverything.cpp  RegisterCodegenUnboxedKernels_0.cpp  selected_operators.yaml
executorch/executorch/logs/: build_summary.txt
executorch/executorch/model/: model_pte.h
executorch/executorch/stubs/: random_ops_stubs.cpp
executorch/include/executorch/runtime/platform/: compiler.h
executorch/logs/: build_summary.txt
executorch/meta/: selected_operators.yaml
executorch/model/: aot_model.py  arm-none-eabi-gcc.cmake  ethos_u_minimal_example.pte  model_pte.h  operators_minimal.txt
executorch/models/: model_pte.h
executorch/runner/: arm_executor_runner.cpp  arm_memory_allocator.h  arm_perf_monitor.cpp
executorch/zephyr/: CMakeLists.txt  Kconfig  module.yml
executorch/zephyr/.docker/: CMakeLists.txt  Dockerfile  DockerfileSimple  custom_arm_setup.sh  get_gcc.sh
executorch/zephyr/scripts/: build.sh  build_stage1.sh  build_stage2_selective.sh  ccdb.py  ccdb2clayer.py  generate_ai_layer_report.py  local_workflow.sh  package_sdk.sh  pte_to_header.py  select_ops_yaml_to_schema.py  sync_ai_layer_from_stage1.sh
executorch/zephyr/src/: arm_executor_runner.cpp  arm_memory_allocator.cpp  arm_memory_allocator.h  ethos_u_stub.cpp  posix_stub.cpp  random_ops_stubs.cpp  register_quantized_ops.cpp  zephyr_stdint_compat.h
python/: camera_test.py  generate.py  kws.py  spectrogram.py
python/appnodes/: DebugDisplay.py  DebugSource.py  KWS.py  KWSClassify.py  KWSDisplay.py  MFCC.py  Mixer.py  NullEventNode.py  Spectrogram.py  SpectrogramDisplay.py  __init__.py
python/nodes/: CameraFrame.py  DeinterleaveStereo.py  Hanning.py  RealToComplex.py  SRC.py  SendToNetwork.py  SpeexPreprocess.py  StereoToMono.py  TFLite.py  ZephyrAudioSource.py  ZephyrDebugAudioSource.py  ZephyrDebugVideoSource.py  ZephyrLCD.py  ZephyrVideoSource.py
python/tools/: create_bin.py  gen_img.py  mfccconfig.yaml  read_bin.py
src/: README.md  config.h  container.c  container.h  main.c  main.cpp  md5.c  startup.c  stream.cpp  stream.h
src/networks/: create_bin.py  external.cpp  kws_micronet_m.tflite.cpp  kws_micronet_m_vela_H128.tflite.cpp  kws_micronet_m_vela_H256.tflite.cpp  kws_micronet_m_vela_Y256.tflite.cpp  kws_micronet_m_vela_Z256.tflite.cpp  md5.h  network.cpp  network.h
src/stream/cpp/: cg_queue.cpp  cg_queue.hpp  custom.hpp  ethos_def.hpp  ethosu_mem_config.hpp  kws_mfcc.c  kws_mfcc.h  node_globals.cpp  node_globals.hpp  rtos_events.hpp  stream_types.hpp  zephyr_allocator.hpp
src/stream/cpp/appnodes/: AppDisplay.hpp  AppDisplay_old.hpp  CameraFrame.hpp  DebugDisplay.hpp  DebugSource.hpp  ImgUtils.hpp  KWSClassify.hpp  KWSDisplay.hpp  MFCC.hpp  Mixer.hpp  Spectrogram.hpp  SpectrogramDisplay.hpp
src/stream/cpp/nodes/: CFFT.hpp  Convert.hpp  DeinterleaveStereo.hpp  Gain.hpp  Hanning.hpp  InterleaveStereo.hpp  NullSink.hpp  RealToComplex.hpp  SRC.hpp  SendToNetwork.hpp  SlidingBuffer.hpp  SpeexPreprocess.hpp  StereoToMono.hpp  TFLite.hpp  VStreamAudioSink.hpp  VStreamAudioSource.hpp  VStreamVideoSink.hpp  VStreamVideoSource.hpp  ZephyrAudioSource.hpp  ZephyrDebugAudioSource.hpp  ZephyrDebugVideoSource.hpp  ZephyrLCD.hpp  ZephyrVideoSource.hpp
src/stream/json/: scheduler_ident.json  scheduler_selectors_inits.json
src/stream/python/: audio_output.py  camera_test.py  create.py  debug.py  debug_create.py  generate.py  kws.py  spectrogram.py  temp.py
src/stream/python/appnodes/: AppDisplay.py  KWSDisplay.py  MFCC.py  (+2 more)
src/stream/scheduler/: AppNodes.hpp  graph.dot  kws.json  scheduler.cpp  scheduler.h
src/streamgraph/: README.md
src/streamgraph/appa/: AppNodes_appa.hpp  AppNodes_grapha.hpp  CMakeLists.txt  appa_custom_config.hpp  appa_extern_templates.hpp  appa_params.c  appa_params.h  grapha_custom_config.hpp  grapha_params.c  grapha_params.h  scheduler_appa.cpp  scheduler_appa.h  scheduler_grapha.cpp  scheduler_grapha.h
src/streamgraph/appb/: AppNodes_appb.hpp  appb_extern_templates.hpp  appb_params.c  appb_params.h  scheduler_appb.cpp  scheduler_appb.h
src/streamgraph/appc/: AppNodes_appc.hpp  appc.dot  appc_extern_templates.hpp  appc_params.c  appc_params.h  scheduler_appc.cpp  scheduler_appc.h
src/streamgraph/common/: CMakeLists.txt  IdentifiedNode.hpp  app_config.hpp  cstream_node.h  datatypes.hpp  node_settings_datatype.h  rtos_events.hpp  selector_ids.h  template_instantiations.cpp
src/streamgraph/cpp/: arm_stream_custom_config.hpp  grapha_custom_config.hpp  grapha_params.c  grapha_params.h  rtos_events.hpp
src/streamgraph/json/: scheduler_ident.json
src/streamgraph/nodes_csrc/: README.md
src/streamgraph/nodes_src/: img_utils.cpp  init_drv_src.cpp  kws_img.c
src/streamgraph/python/: camera_test.py  generate.py  kws.py  spectrogram.py
src/streamgraph/scheduler/: AppNodes.hpp  scheduler_grapha.cpp  scheduler_grapha.h
src/streamgraph/streamnodes/: CMakeLists.txt  init_drv_src.hpp
(+100 files in other folders)
